fix(navbar): notifications can overlap with certain pages (#4887)
* Revert "refactor(ticket-fields): leave larger z-index to header (#4381)"

This reverts commit f602cab55571e97aac739dcb1668348acf58cc7d.

* fix: remove navbar z-index and add z-index to resizer

* fix: increase resize z-index

--- a/src/pages/common/components/Navbar.less
+++ b/src/pages/common/components/Navbar.less
@@ -10,7 +10,6 @@
         max-width: 350px;
         display: flex;
         flex-direction: row;
-        z-index: 2;
         width: 100%;
         height: 100%;
         border-right: 1px solid var(--navbar-border-color);
@@ -33,6 +32,7 @@
         top: 0px;
         bottom: 0px;
         width: 5px;
+        z-index: 100;
         cursor: col-resize;
         resize: horizontal;
 
