--- a/src/pages/settings/ticketFields/TicketFields.less
+++ b/src/pages/settings/ticketFields/TicketFields.less
@@ -6,17 +6,11 @@
         flex-direction: column;
     }
 
-    .pageHeaderContainer,
-    .listingPageSectionContainer {
+    .pageHeaderContainer {
         position: sticky;
         top: 0;
         z-index: 10;
         background-color: var(--neutral-grey-0);
-    }
-
-    .listingPageSectionContainer {
-        z-index: 1;
-        top: 57px;
     }
 
     .headerContainer {
